# cosmodex-contracts

./: Cargo.toml  README.md  deploy.sh
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  test.rs
contracts/pool/test_snapshots/test/: test_add_initial_liquidity.1.json  test_add_liquidity_zero_amounts_panics.1.json  test_add_non_proportional_liquidity_panics.1.json  test_add_proportional_liquidity.1.json  test_division_by_zero_protection.1.json  test_minimum_liquidity_protection.1.json  test_negative_amount_validation.1.json  test_non_xlm_pool_detection.1.json  test_overflow_protection_in_liquidity_calculation.1.json  test_overflow_protection_in_swap.1.json  test_remove_insufficient_lp_tokens_panics.1.json  test_remove_liquidity.1.json  test_remove_liquidity_from_empty_pool_panics.1.json  test_remove_zero_liquidity_panics.1.json  test_swap_a_for_b.1.json  test_swap_invalid_token_address_panics.1.json  test_swap_zero_amount_in_panics.1.json  test_xlm_pool_detection.1.json  test_xlm_pool_with_real_native_detection.1.json  test_xlm_pool_with_xlm_as_token_a.1.json
contracts/poolfactory/: Cargo.toml
contracts/poolfactory/src/: lib.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  lib.rs  test.rs
contracts/token/test_snapshots/test/: test.1.json  test_burn.1.json  test_zero_allowance.1.json  transfer_from_insufficient_allowance.1.json  transfer_insufficient_balance.1.json
contracts/tokenfactory/: Cargo.toml
contracts/tokenfactory/src/: lib.rs  test.rs
contracts/tokenlaunch/: Cargo.toml
contracts/tokenlaunch/src/: contract.rs  (+2 more)
(+9 files in other folders)
